--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,13 +1,14 @@
-FROM python:3.6.0-alpine
+FROM python:3.6.0
 
 WORKDIR /app
-ADD . /app
 
-RUN apk --no-cache --update add build-base && \
-    pip install -r /app/requirements.txt && \
-    apk del build-base
+COPY . /app
+
+RUN apt update -qq && apt install -y build-essential
+RUN pip install -r /app/requirements.txt
 
 ENV POST_DATABASE_HOST post_db
+
 ENV POST_DATABASE posts
 
-ENTRYPOINT ["python3", "post_app.py"]
+ENTRYPOINT [“python3”, “post_app.py”]
