--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,14 +1,9 @@
-FROM python:3.6.0
-
+FROM ubuntu:18.04
 WORKDIR /app
-
-COPY . /app
-
-RUN apt update -qq && apt install -y build-essential
-RUN pip install -r /app/requirements.txt
-
+ADD . /app
+RUN apt update -y \
+ && apt install -y python3-pip
+RUN pip3 install -r requirements.txt
 ENV POST_DATABASE_HOST post_db
-
 ENV POST_DATABASE posts
-
-ENTRYPOINT [“python3”, “post_app.py”]
+ENTRYPOINT ["python3", "post_app.py"]
