--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test_integration_job:
     - echo 'Testing 2'
 
 deploy_dev_job:
-  stage: deploy
+  stage: review
   script:
     - echo 'Deploy'
   environment:
