--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,8 @@
-COMPOSE_PROJECT_NAME=reddit
+COMPOSE_PROJECT_NAME=kitit
 USERNAME_DOCKERHUB=kitit
+USERNAME=kitit
 UI_VERSION=ui:1.0
 UI_PORT=9292:9292/tcp
 MONGO_VERSION=3.2
+IMAGE_LOGGING_TAG=logging
+ZIPKIN_ENABLED=true
